# Federated-Neuro-Symbolic-IDS-in-mobile-apps

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Steps-of-execution  UI_MOCKUPS.md  UI_PREVIEW.html  WIREFRAMES.md  code_of_conduct.md  dashboard.py  main.py  pyproject.toml  requirements.txt  run_all.sh  run_backend.sh  updated_requirements.txt
