[project]
name = "android-malware-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "androguard>=4.1.3",
    "dagshub>=0.6.3",
    "fuzzywuzzy>=0.18.0",
    "imblearn>=0.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.0",
]
